fix up some errors in summary stats and merging - don't worry, it won't affect the results

--- a/20_modeling/opi_tx_month.ipynb
+++ b/20_modeling/opi_tx_month.ipynb
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -694,104 +694,104 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>6891</th>\n",
-       "      <td>NM</td>\n",
-       "      <td>BERNALILLO</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>10</td>\n",
-       "      <td>3.717306e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8113</th>\n",
-       "      <td>NM</td>\n",
-       "      <td>LINCOLN</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>5</td>\n",
-       "      <td>9.621965e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7802</th>\n",
-       "      <td>NM</td>\n",
-       "      <td>GRANT</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1.362313e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22532</th>\n",
+       "      <th>32388</th>\n",
        "      <td>TX</td>\n",
-       "      <td>COMAL</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1.597241e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17408</th>\n",
-       "      <td>OK</td>\n",
-       "      <td>STEPHENS</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2.756969e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32722</th>\n",
-       "      <td>TX</td>\n",
-       "      <td>MADISON</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5.474603e+04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20211</th>\n",
-       "      <td>TX</td>\n",
-       "      <td>BRAZORIA</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>7</td>\n",
-       "      <td>6.176671e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24860</th>\n",
-       "      <td>TX</td>\n",
-       "      <td>ELLIS</td>\n",
+       "      <td>LLANO</td>\n",
        "      <td>2012</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3.828857e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3649</th>\n",
-       "      <td>LA</td>\n",
-       "      <td>NATCHITOCHES</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6.912529e+05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30971</th>\n",
-       "      <td>TX</td>\n",
-       "      <td>KINNEY</td>\n",
-       "      <td>2011</td>\n",
        "      <td>2</td>\n",
-       "      <td>2.569208e+04</td>\n",
+       "      <td>3.893116e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25755</th>\n",
+       "      <td>TX</td>\n",
+       "      <td>FRANKLIN</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.938213e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2988</th>\n",
+       "      <td>LA</td>\n",
+       "      <td>LAFAYETTE</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.174203e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29197</th>\n",
+       "      <td>TX</td>\n",
+       "      <td>HOWARD</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4.818856e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7589</th>\n",
+       "      <td>NM</td>\n",
+       "      <td>DONA ANA</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>11</td>\n",
+       "      <td>4.693716e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36793</th>\n",
+       "      <td>TX</td>\n",
+       "      <td>ROCKWALL</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8.829954e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19281</th>\n",
+       "      <td>TX</td>\n",
+       "      <td>BASTROP</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.546548e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25320</th>\n",
+       "      <td>TX</td>\n",
+       "      <td>FISHER</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.634540e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35019</th>\n",
+       "      <td>TX</td>\n",
+       "      <td>NUECES</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6.145509e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15426</th>\n",
+       "      <td>OK</td>\n",
+       "      <td>MUSKOGEE</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.456099e+05</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      BUYER_STATE  BUYER_COUNTY  year  month           MME\n",
-       "6891           NM    BERNALILLO  2010     10  3.717306e+07\n",
-       "8113           NM       LINCOLN  2011      5  9.621965e+05\n",
-       "7802           NM         GRANT  2014      8  1.362313e+06\n",
-       "22532          TX         COMAL  2009      8  1.597241e+06\n",
-       "17408          OK      STEPHENS  2014      3  2.756969e+06\n",
-       "32722          TX       MADISON  2013      1  5.474603e+04\n",
-       "20211          TX      BRAZORIA  2014      7  6.176671e+06\n",
-       "24860          TX         ELLIS  2012     12  3.828857e+06\n",
-       "3649           LA  NATCHITOCHES  2010      6  6.912529e+05\n",
-       "30971          TX        KINNEY  2011      2  2.569208e+04"
+       "      BUYER_STATE BUYER_COUNTY  year  month           MME\n",
+       "32388          TX        LLANO  2012      2  3.893116e+05\n",
+       "25755          TX     FRANKLIN  2007      1  9.938213e+03\n",
+       "2988           LA    LAFAYETTE  2009      5  1.174203e+07\n",
+       "29197          TX       HOWARD  2006      8  4.818856e+05\n",
+       "7589           NM     DONA ANA  2014     11  4.693716e+06\n",
+       "36793          TX     ROCKWALL  2007      8  8.829954e+05\n",
+       "19281          TX      BASTROP  2009      1  1.546548e+05\n",
+       "25320          TX       FISHER  2006      5  1.634540e+04\n",
+       "35019          TX       NUECES  2008      7  6.145509e+06\n",
+       "15426          OK     MUSKOGEE  2011      1  5.456099e+05"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +957,7 @@
        "4       6.0    1.0     9.0   3-6-1-9       South  East South Central  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +1033,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change the population FIPS code to strings\n",
+    "population[\"fips\"] = population[\"fips\"].astype(str)\n",
+    "\n",
+    "# Modify data types of columns - prepare for merging\n",
+    "\n",
+    "population[\"Year\"] = population[\"Year\"].astype(int)\n",
+    "\n",
+    "opi_merge[\"fips\"] = opi_merge[\"fips\"].astype(str)\n",
+    "\n",
+    "opi_merge[\"fips\"] = opi_merge[\"fips\"].apply(lambda x: x.zfill(5)) # fill fips code up to 5 digits\n",
+    "\n",
+    "opi_tx_pop = pd.merge(opi_merge, population, left_on=[\"fips\", \"year\"], right_on=[\"fips\", \"Year\"], how='outer') #Merging based on opioid dataset\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Check if there's any missing value in population"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generate a list of states we need\n",
+    "state = [\n",
+    "    \"Florida\",\n",
+    "    \"Georgia\",\n",
+    "    \"South Carolina\",\n",
+    "    \"Mississippi\",\n",
+    "    \"Alabama\",\n",
+    "    \"Texas\",\n",
+    "    \"Louisiana\",\n",
+    "    \"Oklahoma\",\n",
+    "    \"New Mexico\",\n",
+    "    \"Washington\",\n",
+    "    \"Montana\",\n",
+    "    \"Oregon\",\n",
+    "    \"Idaho\",\n",
+    "]\n",
+    "\n",
+    "opi_tx_pop = opi_tx_pop[opi_tx_pop[\"STNAME\"].isin(state)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opi_tx_pop[\"MME\"] = np.where(opi_tx_pop[\"MME\"].isnull(), 0, opi_tx_pop[\"MME\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# keep the columns that we need\n",
+    "\n",
+    "opi_tx_pop = opi_tx_pop[[\"STNAME\", \"CTYNAME\", \"Year\", \"month\", \"MME\", \"Population\"]]\n",
+    "\n",
+    "# Generate MME per cap\n",
+    "\n",
+    "opi_tx_pop[\"MME_per_cap\"] = opi_tx_pop[\"MME\"]/opi_tx_pop[\"Population\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1057,72 +1131,168 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>county_name</th>\n",
-       "      <th>state_abbr</th>\n",
-       "      <th>fips</th>\n",
-       "      <th>BUYER_STATE</th>\n",
-       "      <th>BUYER_COUNTY</th>\n",
-       "      <th>year</th>\n",
-       "      <th>month</th>\n",
-       "      <th>MME</th>\n",
-       "      <th>STATE</th>\n",
-       "      <th>COUNTY</th>\n",
        "      <th>STNAME</th>\n",
        "      <th>CTYNAME</th>\n",
        "      <th>Year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>MME</th>\n",
        "      <th>Population</th>\n",
-       "      <th>STATE1</th>\n",
-       "      <th>COUNTY1</th>\n",
+       "      <th>MME_per_cap</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Louisiana</td>\n",
+       "      <td>Acadia Parish</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.821391e+05</td>\n",
+       "      <td>60522</td>\n",
+       "      <td>4.661761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Louisiana</td>\n",
+       "      <td>Acadia Parish</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.607831e+06</td>\n",
+       "      <td>60522</td>\n",
+       "      <td>26.566053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Louisiana</td>\n",
+       "      <td>Acadia Parish</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.971931e+06</td>\n",
+       "      <td>60522</td>\n",
+       "      <td>32.582050</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Louisiana</td>\n",
+       "      <td>Acadia Parish</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.578223e+06</td>\n",
+       "      <td>60522</td>\n",
+       "      <td>26.076841</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Louisiana</td>\n",
+       "      <td>Acadia Parish</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.914167e+06</td>\n",
+       "      <td>60522</td>\n",
+       "      <td>31.627626</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80094</th>\n",
+       "      <td>Washington</td>\n",
+       "      <td>Whitman County</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>48164</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80095</th>\n",
+       "      <td>Washington</td>\n",
+       "      <td>Yakima County</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>247800</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80249</th>\n",
+       "      <td>Louisiana</td>\n",
+       "      <td>La Salle Parish</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>14356</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80250</th>\n",
+       "      <td>Louisiana</td>\n",
+       "      <td>La Salle Parish</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>14366</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80251</th>\n",
+       "      <td>Louisiana</td>\n",
+       "      <td>La Salle Parish</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>14313</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>52237 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [county_name, state_abbr, fips, BUYER_STATE, BUYER_COUNTY, year, month, MME, STATE, COUNTY, STNAME, CTYNAME, Year, Population, STATE1, COUNTY1]\n",
-       "Index: []"
+       "           STNAME          CTYNAME  Year  month           MME  Population  \\\n",
+       "0       Louisiana    Acadia Parish  2006    1.0  2.821391e+05       60522   \n",
+       "1       Louisiana    Acadia Parish  2006    2.0  1.607831e+06       60522   \n",
+       "2       Louisiana    Acadia Parish  2006    3.0  1.971931e+06       60522   \n",
+       "3       Louisiana    Acadia Parish  2006    4.0  1.578223e+06       60522   \n",
+       "4       Louisiana    Acadia Parish  2006    5.0  1.914167e+06       60522   \n",
+       "...           ...              ...   ...    ...           ...         ...   \n",
+       "80094  Washington   Whitman County  2015    NaN  0.000000e+00       48164   \n",
+       "80095  Washington    Yakima County  2015    NaN  0.000000e+00      247800   \n",
+       "80249   Louisiana  La Salle Parish  2003    NaN  0.000000e+00       14356   \n",
+       "80250   Louisiana  La Salle Parish  2004    NaN  0.000000e+00       14366   \n",
+       "80251   Louisiana  La Salle Parish  2005    NaN  0.000000e+00       14313   \n",
+       "\n",
+       "       MME_per_cap  \n",
+       "0         4.661761  \n",
+       "1        26.566053  \n",
+       "2        32.582050  \n",
+       "3        26.076841  \n",
+       "4        31.627626  \n",
+       "...            ...  \n",
+       "80094     0.000000  \n",
+       "80095     0.000000  \n",
+       "80249     0.000000  \n",
+       "80250     0.000000  \n",
+       "80251     0.000000  \n",
+       "\n",
+       "[52237 rows x 7 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Change the population FIPS code to strings\n",
-    "population[\"fips\"] = population[\"fips\"].astype(str)\n",
-    "\n",
-    "# Modify data types of columns - prepare for merging\n",
-    "\n",
-    "population[\"Year\"] = population[\"Year\"].astype(int)\n",
-    "\n",
-    "opi_merge[\"fips\"] = opi_merge[\"fips\"].astype(str)\n",
-    "\n",
-    "opi_merge[\"fips\"] = opi_merge[\"fips\"].apply(lambda x: x.zfill(5)) # fill fips code up to 5 digits\n",
-    "\n",
-    "opi_tx_pop = pd.merge(opi_merge, population, left_on=[\"fips\", \"year\"], right_on=[\"fips\", \"Year\"], how='left') #Merging based on opioid dataset\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Check if there's any missing value in population"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# keep the columns that we need\n",
-    "\n",
-    "opi_tx_pop = opi_tx_pop[[\"BUYER_STATE\", \"BUYER_COUNTY\", \"year\", \"month\", \"MME\", \"Population\"]]\n",
-    "\n",
-    "# Generate MME per cap\n",
-    "\n",
-    "opi_tx_pop[\"MME_per_cap\"] = opi_tx_pop[\"MME\"]/opi_tx_pop[\"Population\"]"
+    "opi_tx_pop"
    ]
   },
   {
